    . [#780] Projects have to explicitely link against Boost when compiling ViSP with ar module
    . [#781] Wrong share install path on unix-like system
    . [#785] Static variable in vpServo
    . [#787] Unable to build simdlib 3rd party for iOS
    . [#792] Mismatch between mu_ij and n_ij centered moments of an ellipse
    . [#801] Build issue with visp_java
----------------------------------------------
ViSP 3.3.0 (released February 14, 2020)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Gatien Gaumerais, Yasutomo Shirahama, Yash Kapoor, Noura Neji,
      Rahaf Rahal, Romain Lagneau, ahfuzhang, Franco Fusco, Olivier Kermorgant,
      Alexander Oliva
  - New features and improvements
    . Upgrade to new AprilTag3 version. Note that TAG_36h10, TAG_25h7 and
      TAG_36ARTOOLKIT are deprecated and that new families: TAG_CIRCLE21h7,
      TAG_CIRCLE49h12, TAG_CUSTOM48h12, TAG_STANDARD41h12, TAG_STANDARD52h13
      are supported. AprilTag detection time is reduced
    . Remove libxml2 3rd party dependency to use pugixml built-in 
    . Replace pthreads-win32 for POSIX threads for windows 3rd party with
      pthreads4w implementation
    . New matrix and vector initialization methods to ease setting elements
    . Introduce Eigen <-> ViSP conversion functions in vp namespace
    . Add OpenBLAS, Intel MKL and Atlas explicit support
    . Add support of vpImage<vpRGBa> to vpMbGenericTracker
    . Add support of vpImage<vpRGBa> to vpKeyPoint
    . Introduce force/torque controller for Franka Emika Panda robot in
      vpRobotFranka class
    . New vpQbDevice and vpQbSoftHand classes and examples to control
      qbrobotics devices
    . Compatibility with Microsoft Visual C++ 2019 (MSCV 16)
    . Compatibility with FlyCapture 2.13 to enable vpFlyCaptureGrabber usage
    . Compatibility with PCL > 1.9.1 to enable additional features in
      vpRealSense2 class