@@ -55,6 +55,7 @@ ViSP 3.3.1 (under development)
     . [#787] Unable to build simdlib 3rd party for iOS
     . [#792] Mismatch between mu_ij and n_ij centered moments of an ellipse
     . [#801] Build issue with visp_java
+    . [#808] vpVirtuose.cpp doen't build with Visual 2019 (vc16)
 ----------------------------------------------
 ViSP 3.3.0 (released February 14, 2020)
   - Contributors:
